--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 django = "==2.2.1"
 psycopg2 = "==2.8.2"
-requests = "*"
+requests = "==2.21.0"
 
 [requires]
 python_version = "3.7.3"
