--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django = "==2.2.1"
 psycopg2 = "==2.8.2"
 requests = "==2.21.0"
+gunicorn = "==19.9.0"
+django-heroku = "==0.3.1"
 
 [requires]
 python_version = "3.7.3"
